# csc746

./: .gitignore  2_RandomForest_Cleveland_CSC508.ipynb  README.org  blocked.txt
HW1/: CMakeLists.txt  README.md  compile_commands.json  datafile-1-csv.txt  flops.py  nm.csv  no_mem.cpp  runsum.in  sm.csv  structured_mem.cpp  um.csv
HW2/: CMakeLists.txt  README.md  basic-copy.csv  basic-copy.txt  basic.csv  basic.txt  blocked.csv  blocked.txt  dgemm-basic-copy.cpp  dgemm-basic.cpp  dgemm-blocked.cpp  results.py
HW3/: CMakeLists.txt  README.md  basic.csv  basic_(null).csv  basic_(null)_(null).csv  dgemv-basic.cpp  dgemv-openmp.cpp  openmp.csvdynamic  openmp.csvstatic  openmp.txt  openmp_dynamic.csv  openmp_dynamic_16.csv  openmp_dynamic_272.csv  openmp_dynamic_4.csv  openmp_dynamic_64.csv  openmp_static.csv  openmp_static_1.csv  openmp_static_16.csv  openmp_static_2.csv  openmp_static_272.csv  openmp_static_32.csv  openmp_static_4.csv  openmp_static_8.csv  results.py
HW4/: README.md  basic-128-128-0.csv  basic-2048-2048-63.csv  basic-512-512-0.csv  basic-512-512-15.csv  benchmark.cpp  blas.csv  blas_128.csv  blas_2048.csv  blocked-128-16-3.csv  blocked-128-4-0.csv  blocked-128-4-3.csv  blocked-128-4-63.csv  blocked-2048-16-15.csv  blocked-2048-16-63.csv  blocked-2048-4-3.csv  blocked-2048-4-63.csv  blocked-512-16-15.csv  blocked-512-16-3.csv  blocked-512-4-3.csv  blocked-512-4-63.csv  blocked_1.csv  blocked_16.csv  blocked_4.csv  results.py
HW5/: CMakeLists.txt  README.md  dummy.txt  results.py  sobel_cpu.cpp  sobel_cpu.sh  sobel_cpu_omp_offload.cpp  sobel_cpu_omp_offload.sh  sobel_gpu.cu  sobel_gpu.sh  sobel_gpu_1024_1024.txt  sobel_gpu_1024_128.txt  sobel_gpu_1024_256.txt  sobel_gpu_1024_32.txt  sobel_gpu_1024_512.txt  sobel_gpu_1024_64.txt  sobel_gpu_16_1024.txt  sobel_gpu_16_128.txt  sobel_gpu_16_256.txt  sobel_gpu_16_32.txt  sobel_gpu_16_512.txt  sobel_gpu_16_64.txt  sobel_gpu_1_1024.txt  sobel_gpu_1_128.txt  sobel_gpu_1_256.txt  sobel_gpu_1_32.txt  sobel_gpu_1_512.txt  sobel_gpu_1_64.txt  sobel_gpu_256_1024.txt  sobel_gpu_256_128.txt  sobel_gpu_256_256.txt  sobel_gpu_256_32.txt  sobel_gpu_256_512.txt  sobel_gpu_256_64.txt  sobel_gpu_4096_1024.txt  sobel_gpu_4096_128.txt  sobel_gpu_4096_256.txt  sobel_gpu_4096_32.txt  sobel_gpu_4096_512.txt  sobel_gpu_4096_64.txt  (+12 more)
HW5/logs/cpu/: sobel_cpu_1.txt  sobel_cpu_12.txt  sobel_cpu_16.txt  sobel_cpu_2.txt  sobel_cpu_4.txt  sobel_cpu_8.txt
HW5/logs/eff/: sobel_gpu_eff_1024_1024.txt  (+41 more)
HW5/scripts/: skeleton-gpu-batch-script.sh
HW6/: CMakeLists.txt  README.md  TODO.org  compile_commands.json  dummy.cpp  mpi_2dmesh.cpp  mpi_2dmesh.hpp  output.txt  results.py  serial_column.txt  serial_row.txt  serial_tiled.txt
HW6/.clangd/index/: mpi_2dmesh.cpp.31531C3D3E2A1144.idx  mpi_2dmesh.hpp.B0F220B68F9E2515.idx
HW6/scripts/: run_script.sh
chrono_timer/: CMakeLists.txt  chrono_timer.cpp  flops.py  nm.csv  no_mem.cpp  sm.csv  structured_mem.cpp  um.csv  unstructured_mem.cpp
hdf5/: CMakeLists.txt  compile_commands.json  hdf5_file_ops.c  hdf5_file_ops.h  hdf5block2d.c  malloc2D.c
lab2/: GPU_config.txt  vecadd.cpp~  vecadd.cu  vecaddcuda.cpp~
lab3/: CMakeLists.txt  CMakeLists.txt~  GPU_config.txt  a.out  vecadd  vecadd-omp  vecadd-omp-offload  vecadd-omp-offload.cpp  vecadd-omp-offload.cpp~  vecadd-omp.cpp  vecadd-omp.cpp~  vecadd.cpp
mmul-harness-instructional/: CMakeLists.txt  basic-copy.csv  basic-copy.txt  basic.csv  basic.txt  benchmark.cpp  blocked.csv  blocked.txt  compile_commands.json  dgemm-basic-copy.cpp  dgemm-basic.cpp  dgemm-blocked.cpp  results.py
mmul-omp-harness-instructional/: README.md  basic-128-128-15.csv  basic-128-128-3.csv  basic-128-128-63.csv  basic-2048-2048-0.csv  basic-2048-2048-15.csv  basic-2048-2048-3.csv  basic-512-512-3.csv  basic-512-512-63.csv  blas-128-128-0.csv  blas-2048-2048-0.csv  blas-512-512-0.csv  blas_512.csv  blocked-128-16-0.csv  blocked-128-16-15.csv  blocked-128-16-63.csv  blocked-128-4-15.csv  blocked-2048-16-0.csv  blocked-2048-16-3.csv  blocked-2048-4-0.csv  blocked-2048-4-15.csv  blocked-512-16-0.csv  blocked-512-16-63.csv  blocked-512-4-0.csv  blocked-512-4-15.csv  dgemm-basic-omp.cpp  dgemm-blocked-omp.cpp  results.py
tsunami/: CMakeLists.txt  README.org  compile_commands.json  example0.hdf5  example1.hdf5  example2.hdf5  example3.hdf5  file_ops.c  file_ops.h  generate_image.go  generate_image.py  generate_movie.sh  go.mod  go.sum  hdf5_file_ops.c  hdf5_file_ops.h  memory.c  omp-test.c  omp-test.h  pending.org  timer.c  timer.h  tsunami.c
vmmul-harness-instructional/: CMakeLists.txt  README.md  basic.txt  benchmark.cpp  job.in  results.py
(+169 files in other folders)
